# dumpling-helpers

./: .gitignore  README.md  package-lock.json  package.json
.claude/: settings.local.json
.claude/plans/: toolsuite-plan.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  init-firewall.sh
apps/dumpling/backend/: pyproject.toml
apps/dumpling/frontend/: index.html  package.json  tsconfig.app.json  vite.config.ts
apps/fusilli/frontend/: index.html  package.json  tsconfig.app.json  vite.config.ts
apps/stromboli/frontend/: index.html  package.json  tsconfig.app.json  vite.config.ts
backend/: pyproject.toml
backend/app/: main.py
backend/app/models/: config.py  experiments.py
backend/app/routes/: browse.py  capabilities.py  discover.py  generate.py  validate.py
backend/app/services/: generator.py  validator.py
deploy/: .env.example  README.md
deploy/caddy/: dumpling-helpers.caddy
deploy/scripts/: bootstrap.sh  deploy.sh  refresh-cf-ips.sh
deploy/systemd/: dumpling-libqc-api.service  dumpling-wizard-api.service
docs/: file-contracts.md
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ImportButton.tsx
frontend/src/lib/: coverageEstimate.ts  oligoAlignment.ts  sequencingPlan.ts  (+2 more)
library-qc/: .gitignore  package.json
library-qc/.devcontainer/: Dockerfile  devcontainer.json
library-qc/backend/: pyproject.toml
library-qc/frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
(+85 files in other folders)
