[project]
name = "dumpling-helpers-backend"
version = "0.1.0"
description = "Configuration helper backend for the dumpling DMS pipeline"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "jsonschema>=4.26.0",
    "pydantic>=2.13.3",
    "python-multipart>=0.0.27",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.46.0",
]
