[project]
name = "dumpling-helpers-backend"
version = "0.1.0"
description = "Configuration helper backend for the dumpling DMS pipeline"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "jsonschema>=4.26.0",
    "pydantic>=2.13.3",
    "python-multipart>=0.0.27",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
